--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -91,16 +91,45 @@ section {
     background-position: right center;
 }
 
+.input-block {
+    position: relative;
+}
 .input {
     background-color: rgba($black, 0.7);
     padding: 10px 15px;
     color: #fff;
     font-size: 14px;
     line-height: 20px;
-    width: 310px;
+    width: 100%;
     font-family: $font;
+    border: 1px solid transparent;
     &::placeholder {
         color: rgba(#fff, 0.6);
+    }
+    &.input-error {
+        border-color: rgb(180, 78, 78);
+    }
+}
+.error {
+    // display: none;
+    position: absolute;
+    bottom: -23px;
+    left: 0px;
+    z-index: 30;
+    background-color: rgb(180, 78, 78);
+    padding: 5px 10px;
+    border-radius: 5px;
+    width: auto;
+    &::after {
+        content: "";
+        position: absolute;
+        top: -4px;
+        left: 15px;
+        width: 0;
+        height: 0;
+        border-style: solid;
+        border-width: 0 5px 5px 5px;
+        border-color: transparent transparent rgb(180, 78, 78) transparent;
     }
 }
 
@@ -108,18 +137,40 @@ section {
     display: flex;
     align-items: center;
     &__item:not(:last-child) {
-        margin-right: 10px;
+        margin-right: 15px;
     }
-    &__item a svg {
+    &__item svg {
         width: 30px;
+        transition: all 0.5s linear;
     }
-    &__item a svg path {
-        transition: fill 0.3s;
+    &__item svg {
+        transition: all 0.5s linear;
+    }
+    &__item {
+        position: relative;
+        &::before {
+            transition: all 0.5s linear;
+            opacity: 0;
+            content: "";
+            position: absolute;
+            width: 35px;
+            height: 35px;
+            left: 50%;
+            top: 45%;
+            transform: translate(-50%, -50%);
+            box-shadow: 0 0 30px 3px #fff;
+            background-color: #fff;
+            border-radius: 50%;
+            z-index: -1;
+        }
     }
 }
 .soclist__item:hover {
-    svg path {
-        fill: darken(#fff, 70%);
+    svg {
+        fill: $black !important;
+    }
+    &::before {
+        opacity: 1;
     }
 }
 
@@ -164,21 +215,62 @@ section {
 .next {
     position: absolute;
     z-index: 5;
+    cursor: pointer;
     svg {
         width: 67px;
         height: 67px;
+        fill: $gray;
     }
-    svg path {
+    svg {
         transition: fill 0.3s;
     }
     &:hover {
-        svg path {
+        svg {
             fill: $black;
         }
     }
 }
-.prev {
-    transform: rotate(-180deg);
+
+.swiper-pagination {
+    .swiper-pagination-bullet-active {
+        opacity: 1;
+        background-color: $black;
+    }
+}
+
+.mfp-zoom-out-cur,
+.mfp-zoom-out-cur .mfp-image-holder .mfp-close {
+    cursor: default;
+}
+.mfp-close {
+    cursor: pointer !important;
+    width: 20px !important;
+    height: 20px !important;
+    line-height: 16px !important;
+    margin-top: 10px;
+}
+.mfp-arrow-right::before {
+    display: none;
+}
+.mfp-arrow-right::after {
+    content: url(../img/arrow-next.svg);
+    border: none;
+    transform: scale(1.3);
+    left: -15px;
+    top: 0;
+}
+.mfp-arrow-left::before {
+    display: none;
+}
+.mfp-arrow-left::after {
+    content: url(../img/arrow-prev.svg);
+    border: none;
+    transform: scale(1.3);
+    left: -15px;
+    top: 0;
+}
+.mfp-counter {
+    display: none;
 }
 
 // --------- ScrollBar ----------
