--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,6 +13,7 @@
 
 @import "../../node_modules/swiper/swiper-bundle.min.css";
 @import "../../node_modules/magnific-popup/dist/magnific-popup.css";
+@import "../../node_modules/animate.css/animate.min.css";
 
 
 // ---- Media-Mobile ----
