--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,10 +10,10 @@
 
 // ---- Plugins ----
 @import "./plugins/simple-select.scss";
+@import "./plugins/animate.scss";
 
 @import "../../node_modules/swiper/swiper-bundle.min.css";
 @import "../../node_modules/magnific-popup/dist/magnific-popup.css";
-@import "../../node_modules/animate.css/animate.min.css";
 
 
 // ---- Media-Mobile ----
