--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -662,7 +662,11 @@
     }
     .numbers__title {
         border-radius: 50%;
-        padding: 73px 50px;
+        width: 250px;
+        height: 250px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         background-color: $black;
         h4 {
             text-transform: uppercase;
