--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -431,6 +431,9 @@
 
 //Max-Width: 800px ================================
 @media (max-width: 800px) {
+    .cursor-dot-outline {
+        display: none;
+    }
     .faq {
         .accordion {
             padding: 0;
